<resources>
    <string name="app_name">Children Education App</string>
    <string name="login">Logowanie</string>
    <string name="register">Rejestracja</string>
    <string name="step_counter">Licznik Kroków</string>
    <string name="statistics">Ranking</string>
    <string name="main_screen">Główny ekran</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_imie">Imię</string>
    <string name="hint_haslo">Hasło</string>
    <string name="btn_login">Zaloguj</string>
    <string name="btn_register">Zarejestruj</string>
    <string name="btn_link_to_register">Nie masz konta? Zarejestruj się teraz.</string>
    <string name="btn_link_to_login">Jesteś zarejestrowany? Zaloguj się teraz.</string>
    <string name="btn_save">Zapisz zmiany</string>
    <string name="btn_reset">Zresetuj poziom i punkty</string>
    <string name="btn_delete">Usuń użytkownika</string>
    <string name="witaj">Witaj</string>
    <string name="btn_logout">WYLOGUJ</string>
    <string name="name">Fullname</string>
    <string name="wybor">Wybierz jedną z poniższych opcji: </string>
    <string name="dailySteps">Dzisiejsza liczba kroków do wykonania: </string>
    <string name="btn_play">GRAJ</string>
    <string name="btn_ustawienia">ustawienia</string>
    <string name="btn_statystyki">Ranking</string>
    <string name="btn_edit">Edytuj Profil</string>
    <string name="steps">Dzisiejsza liczba kroków do wykonania:</string>
    <string name="reset">Reset</string>
    <string name="send_data">Send Data</string>
    <string name="quiz_summary" translatable="true">Question %1$d of %2$d</string>
    <string name="aktualny_postep">Aktualny postęp</string>
    <string name="save_and_exit">Zapisz i Wyjdź</string>
</resources>