<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    >

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/witaj"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/wybor"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnPlafy"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/start_buttonn"
            android:layout_margin="50dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="start"/>
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_statistics"
            android:layout_marginTop="50dp"
            android:text="@string/btn_statystyki"
            android:textColor="@color/white" />




    </LinearLayout>

    <Button

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>